--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "realtime-tracker",
+  "name": "where-am-i",
   "version": "1.0.0",
-  "description": "",
+  "description": "Where am I – A lightweight backend for live location sharing.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
